# voltage-imaging-scripts

./: detrend.m  pyproject.toml
cli/: common.py  inspect_commands.py  io_commands.py  run.py  ts_commands.py
io/: FrameReader.py  cli_tools.py  guided_svd.py  h5_conversion.py  motion_correction.py  ops.py  pipeline.py  svd.py  svd_conversion.py  svd_tests.py  svd_video.py
io/tests/: test_motion_correction.py  test_ops.py  test_svd_conversion.py  test_svd_video.py
roigui/: __init__.py  compositing.py  data_source.py  debounce.py  keybindings.py  main_window.py  operations.py  roi.py  roigui.py  state.py  view_panels.py
roigui/tests/: test_data_source.py  test_operations.py  test_refine_state.py  test_roi.py
svd_view/: __init__.py  buffer.py  data_source.py  state.py  telemetry.py  viewer.py  widgets.py  worker.py
timeseries/: __init__.py  analysis.py  events.py  filtering.py  hifreq_osc.py  ols-streaming.py  ols_streaming.py  qc_analysis.py  rois.py  spatial.py  spike_analysis.py  types.py
timeseries/tests/: test_corr.py  test_hierarchy.py  test_spike_analysis.py
toy_data/: fluctuating_footprints.py
viz/: filterbands.py  grid_dispatchers.py  motion_correction.py  psth_grid.py  psth_videos.py  qc.py  rois.py  scalebars.py  spike_images.py  spike_types.py  timeseries.py  traces.py
viz/tests/: test_psth_videos.py  test_spike_plots.py
windows/: ragged_ops.py
windows/test/: test_iters.py  test_searches.py
