[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imaging_scripts"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "scipy",
    "scikit-image",
    "matplotlib",
    "seaborn",
    "tqdm",
    "click",
    "array-api-compat",
    "awkward",
]

[project.optional-dependencies]
dev = [
    "imageio[pyav]",
    "pytest"
]
gui = [
    "pyside6",
    "pyqtgraph",
    "napari",
    "magicgui"
]

[tool.setuptools]
packages = [
    "imaging_scripts",
    "imaging_scripts.cli",
    "imaging_scripts.io",
    "imaging_scripts.timeseries",
    "imaging_scripts.toy_data",
    "imaging_scripts.roigui",
    "imaging_scripts.svd_view"
]

[project.scripts]
imaging_script = "imaging_scripts.cli.run:cli"

[tool.setuptools.package-dir]
imaging_scripts = "."
